# Training_skerlet

ARM/: hello  hello.c
Autotool/: Makefile  Makefile.am  config.h  config.status  configure.scan  hello
CrossCompile/: Makefile  Makefile.am  config.status  configure  configure.ac  hello
CrossCompile (copy)/: Makefile  config.status  hello
Demo/: Makefile  config.h  config.status  configure  configure.ac
Huy/: Makefile.am  configure.ac
Huy1/: Makefile.am  configure.ac
Huy1/src/code/: main.c
HuyNam/: Makefile.am
ShellScript/: training
Test1/: Makefile  Makefile.in  config.status  configure.ac  hello
Test10/: Makefile.am  configure.ac
Test11/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure.scan  hello
Test12/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  hello  libtool
Test12/.libs/: hello
Test12/autom4te.cache/: output.1  output.2  output.3  requests  traces.1  traces.2  traces.3
Test12/src/: Makefile  Makefile.in  hello1.lo  libhello.h
Test12/src/.deps/: hello-main.Po  main.Po
Test12/src/autom4te.cache/: traces.1
Test13/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  hello
Test14/: Makefile  Makefile.am  configure  (+4 more)
Test14/src/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure.ac  configure.scan  libhello.la
Test14/src/.libs/: libhello.so.0.0.0
Test14/src/autom4te.cache/: output.0  output.1  requests
Test14/src/sources/: hello.c  hello.lo  hello1.lo
Test14/src/sources/.deps/: hello.Plo  hello1.Plo  main.Po
(+128 files in other folders)
