#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(hello, [1], [])
AM_INIT_AUTOMAKE([foreign]) 
AC_CONFIG_HEADERS(config.h)

# Checks for programs.

AC_PROG_CC
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
LT_INIT([shared])
AC_OUTPUT(Makefile)
